--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         </div>
         <span class="card-text"><i class="fa-light fa-calendar-minus"></i></span>
       </section>
+      <!-- loader section  -->
+      <section id="loader" class="d-none">
+        <div style="height:200px" class="d-flex justify-content-center text-align-center">
+          <div class="spinner-border text-success" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </section>
       
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
