--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card">
-              <img id="img2" src="..." class="card-img-top" alt="...">
+            <div id="img2" class="card">
+              <img  src="..." class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 id="tittle" class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
             </div>
