--- a/index.html
+++ b/index.html
@@ -40,20 +40,31 @@
 
         <div class="rowContainer row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <div>
+              <p id="para1" class="card-text">
+
+              </p>
+              <div id="card1" class="card-body">
+                <h5 class="card-title">
+
+                </h5>
+                <p class="card-text">
+
+                </p>
+              </div>
+              <div id="button1" class="d-flex">
+                <button class="bg-warning p-4">Basic</button>
+                <button>Pro</button>
+                <button>EnterPrice</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div id="img2" class="card">
               <img  src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 id="tittle" class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div id="card2" class="card-body">
+                <h5></h5>
+                <p></p>
               </div>
             </div>
           </div>
