--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 </p>
               </div>
-              <div id="button1" class="d-flex">
+              <div id="button1" class="d-flex text-align-between">
                 <button class="bg-warning p-4">Basic</button>
                 <button>Pro</button>
                 <button>EnterPrice</button>
